ghc-4335c07/testsuite/tests/patsyn/should_fail/export-type-synonym.hs
{-# LANGUAGE PatternSynonyms #-}

module Foo ( A(P) ) where

data A = A
data B = B

type C = B

pattern P :: C
pattern P = B
